# STM32-Complier-MCP

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  MCP_TEST_REPORT.md  README.md  UPDATE_SUMMARY.md  install_skill_global.sh  pyproject.toml  requirements.txt
.opencode/: mcp.json  session.json
.opencode/skills/: SKILL_USAGE_GUIDE.md
ESP32_STM32_Bridge/: DESIGN_SPEC.md  DESIGN_SPEC_v1.1.md  README.md
ESP32_STM32_Bridge/docs/: HARDWARE.md
ESP32_STM32_Bridge/esp-idf-project/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
ESP32_STM32_Bridge/esp-idf-project/main/: CMakeLists.txt  flash_writer.h  gpio_driver.c  gpio_driver.h  http_server.c  http_server.h  main.c  mcp_server.c  mcp_server.h  nvs_storage.c  session_manager.c  soft_uart.c  soft_uart.h  swd_driver.c  swd_driver.h  websocket_server.c  websocket_server.h  wifi_manager.c  wifi_manager.h
ESP32_STM32_Bridge/examples/: basic_flash.py  mcp_integration.py
ESP32_STM32_Bridge/firmware/: esp32_stm32_bridge.ino  stm32_flash.h
ESP32_STM32_Bridge/micropython_code/: main.py
ESP32_STM32_Bridge/pio_project/: platformio.ini
ESP32_STM32_Bridge/scripts/: esp32_bridge_client.py
Requirement/: stm32_mcp_2in1.txt  stm32_mcp_gpt.txt  stm32_mcp_opus.txt
docker/: Dockerfile  docker-compose.yml  flash.Dockerfile
docs/: ESP32S3_FLASHER_PROJECT.md  ESP32_FLASHER_INTEGRATION.md  FLASH_DOCKER_GUIDE.md  MULTI_TARGET_GUIDE.md  PHASED_IMPLEMENTATION_GUIDE.md
mcp_build/: __init__.py  stm32_build_server.py
mcp_flash/: __init__.py  base_flasher.py  esp32_remote_flasher.py  flasher_router.py  local_flasher.py  mcu_database.py  stm32_flash_server.py  stm32_flash_server_v2.py  version_switch.py
scripts/: 99-stlink.rules  setup-usb-rules.sh  test_docker_env.py  test_multi_target.py
tests/: test_integration.py  test_phase1_local.py  verify_setup.py
tools/: build.sh  flash.sh
(+113 files in other folders)
