[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stm32-mcp"
version = "2.0.0"
description = "STM32 MCP Build & Flash Server - AI-powered embedded development"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "legogogoagent" },
]
keywords = ["stm32", "mcp", "embedded", "arm", "compiler", "flash"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Embedded Systems",
]
dependencies = [
    "mcp[cli]>=1.26.0",
    "pydantic>=2.0.0",
]

[project.scripts]
stm32-mcp = "stm32_mcp:main"

[project.urls]
Homepage = "https://github.com/legogogoagent/STM32-Complier-MCP"
Repository = "https://github.com/legogogoagent/STM32-Complier-MCP"
Issues = "https://github.com/legogogoagent/STM32-Complier-MCP/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/stm32_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/stm32_mcp/build.sh" = "stm32_mcp/build.sh"
